# gen7-initseed-supporter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: copilot-instructions.md
.github/instructions/: changelog-format.instructions.md  spec-format.instructions.md
.github/prompts/: release-with-changelog.prompt.md
.github/workflows/: bench.yml  ci.yml  release.yml
crates/: README.md
crates/gen7seed-cli/: Cargo.toml  README.md
crates/gen7seed-cli/src/: gen7seed_create.rs  gen7seed_search.rs  gen7seed_sort.rs
crates/gen7seed-rainbow/: Cargo.toml  README.md
crates/gen7seed-rainbow/benches/: chain_generation_bench.rs  rainbow_bench.rs  table_bench.rs
crates/gen7seed-rainbow/examples/: chain_period.rs  chain_period_salt.rs  detection_rate.rs  extract_missing_seeds.rs  measure_coverage.rs  merge_analysis.rs
crates/gen7seed-rainbow/src/: constants.rs  lib.rs
crates/gen7seed-rainbow/src/app/: coverage.rs  generator.rs  mod.rs  searcher.rs
crates/gen7seed-rainbow/src/domain/: chain.rs  coverage.rs  hash.rs  missing_format.rs  mod.rs  sfmt.rs  table_format.rs
crates/gen7seed-rainbow/src/domain/sfmt/: mod.rs  multi.rs  scalar.rs  simd.rs
crates/gen7seed-rainbow/src/infra/: missing_seeds_io.rs  mod.rs  table_io.rs  table_sort.rs
crates/gen7seed-rainbow/tests/: missing_format.rs  sfmt_reference.rs  single_file_table.rs  table_format.rs  table_validation.rs
spec/agent/local_001/: PARALLEL_TABLE_GENERATION.md
spec/agent/local_002/: PARALLEL_SEARCH.md
spec/agent/local_003/: MEMMAP_TABLE_IO.md
spec/agent/local_004/: SORT_KEY_CACHE.md
spec/agent/local_005/: SFMT_SIMD.md
spec/agent/local_006/: MULTI_SFMT.md
spec/agent/local_007/: REDUCE_FUNCTION_IMPROVEMENT.md
spec/agent/local_008/: BENCHMARK_ENHANCEMENT.md
spec/agent/local_009/: SFMT_SKIP.md
spec/agent/local_010/: BENCHMARK_REDUCTION.md
spec/agent/local_011/: REDUCE_HASH_SIMD.md
spec/agent/local_012/: CLI_INTEGRATION.md
spec/agent/local_013/: TABLE_VALIDATION_TEST.md
spec/agent/local_014/: MULTI_SFMT_SEARCH.md
spec/agent/local_015/: MISSING_SEEDS_EXTRACTION.md
spec/agent/local_016/: MULTI_TABLE_PARAMETERS.md
spec/agent/local_017/: CODE_SIMPLIFICATION.md
spec/agent/local_018/: OUTPUT_DIRECTORY_CUSTOMIZATION.md
spec/agent/local_019/: SINGLE_FILE_TABLE_FORMAT.md
spec/agent/local_020/: HASHMAP_SEARCH_OPTIMIZATION.md
spec/initial/: SFMT_RAINBOW_IMPL_GUIDE.md  SFMT_RAINBOW_SPEC.md
