[workspace]
resolver = "2"
members = ["crates/gen7seed-rainbow", "crates/gen7seed-cli"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

[workspace.metadata.release]
tag-name = "v{{version}}"
sign-tag = false
sign-commit = false
push = true

