[package]
name = "gen7seed-cli"
version = "1.0.0"
edition = "2024"
description = "CLI tools for Gen 7 Pokemon initial seed search"
license = "MIT"
repository = "https://github.com/niart120/gen7-initseed-supporter"

[[bin]]
name = "gen7seed_create"
path = "src/gen7seed_create.rs"

[[bin]]
name = "gen7seed_search"
path = "src/gen7seed_search.rs"

[features]
default = ["multi-sfmt", "mmap", "hashmap-search"]
multi-sfmt = ["gen7seed-rainbow/multi-sfmt"]
mmap = ["gen7seed-rainbow/mmap"]
hashmap-search = ["gen7seed-rainbow/hashmap-search"]

[dependencies]
gen7seed-rainbow = { path = "../gen7seed-rainbow", version = "1.0.0" }
