[package]
name = "gen7seed-rainbow"
version = "0.1.0"
edition = "2024"
description = "Rainbow table implementation for Gen 7 Pokemon initial seed search"
license = "MIT"
repository = "https://github.com/your-repo/gen7-initseed-supporter"
authors = []

[dependencies]
# 必須
byteorder = "1.5"
thiserror = "2.0"

# 推奨
rayon = "1.10"
memmap2 = "0.9"

[features]
default = ["multi-sfmt"]
mmap = []
simd = []  # std::simd を使用（nightly必須）
multi-sfmt = ["simd"]  # 16並列SFMT（nightly必須）

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"

[[bench]]
name = "rainbow_bench"
harness = false

[[bench]]
name = "table_bench"
harness = false
