[package]
name = "gen7seed-rainbow"
version = "1.0.0"
edition = "2024"
description = "Rainbow table implementation for Gen 7 Pokemon initial seed search"
license = "MIT"
repository = "https://github.com/niart120/gen7-initseed-supporter"
authors = []

[dependencies]
# 必須
byteorder = "1.5"
thiserror = "2.0"

# 推奨
rayon = "1.10"
memmap2 = "0.9"

# オプション: 高速ハッシュ検索
rustc-hash = { version = "2.1", optional = true }

[features]
default = ["multi-sfmt", "hashmap-search"]
mmap = []
simd = []  # std::simd を使用（nightly必須）
multi-sfmt = ["simd"]  # 16並列SFMT（nightly必須）
hashmap-search = ["dep:rustc-hash"]  # FxHashMap による高速検索

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
rand = "0.8"
serial_test = "3"

[[bench]]
name = "rainbow_bench"
harness = false

[[bench]]
name = "table_bench"
harness = false
